Adding Mancala game. Still work in progress.

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
                     <a href="/connect4.html" class="game-btn">Play Now</a>
                 </div>
             </div>
+            <div class="game-card">
+                <h2>Mancala</h2>
+                <p>Ancient board game of strategy. Collect more stones in your store than your opponent!</p>
+                <div class="button-container">
+                    <a href="/mancala.html" class="game-btn">Play Now</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
