Fixed bugs and added new games

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,13 @@
                     <a href="/mancala.html" class="game-btn">Play Now</a>
                 </div>
             </div>
+            <div class="game-card">
+                <h2>Word Hunt</h2>
+                <p>Find as many words as you can in the letter grid! Compete against your opponent in real-time.</p>
+                <div class="button-container">
+                    <a href="/wordhunt.html" class="game-btn">Play Now</a>
+                </div>
+            </div>
         </div>
     </div>
     <script>
