--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desk Duels</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
     <button class="theme-toggle" aria-label="Toggle theme">
@@ -46,10 +47,10 @@
             </div>
             
             <div class="game-card">
-                <h2>Word Search</h2>
+                <h2>Word Hunt</h2>
                 <p>Find hidden words in a grid of letters</p>
                 <div class="button-container">
-                    <a href="/wordsearch.html" class="game-btn">Play Now</a>
+                    <a href="/wordhunt.html" class="game-btn">Play Now</a>
                 </div>
             </div>
         </div>
