--- a/public/mancala.html
+++ b/public/mancala.html
@@ -7,7 +7,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Multiplayer Mancala</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/games/mancala.css">
 </head>
 <body>
     <button class="theme-toggle" aria-label="Toggle theme">
