--- a/public/connect4.html
+++ b/public/connect4.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplayer Connect 4</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/games/connect4.css">
 </head>
 <body>
     <button class="theme-toggle" aria-label="Toggle theme">
