Update game logic and UI for Desk Duels; added rematch functionality for Tic Tac Toe, Connect 4, and Mancala, improved game state management, and enhanced CSS styles for better user experience. Updated package version to 1.0.0 and added license information.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </button>
     <div class="container">
         <h1>Welcome to Desk Duels</h1>
-        <p class="subtitle">Choose a game to play</p>
+        <p class="status">Choose a game to play</p>
         
         <div class="games-grid">
             <div class="game-card">
