--- a/public/mancala.html
+++ b/public/mancala.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#4F46E5">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,7 @@
     <div class="container mancala">
         <h1>Multiplayer Mancala</h1>
         <div id="game-status" class="status">Waiting for opponent...</div>
-        
+
         <div id="mancala-board" class="mancala-board">
             <div class="mancala store-b">0</div>
             <div class="pits-container">
@@ -54,6 +54,7 @@
 
         <div class="button-container">
             <button id="leave-game" class="game-btn home-btn">Back to Home</button>
+            <button id="play-again" class="game-btn" style="display: none;">Play Again</button>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
@@ -73,7 +74,7 @@
         themeToggle.addEventListener('click', () => {
             const currentTheme = html.getAttribute('data-theme');
             const newTheme = currentTheme === 'light' ? 'dark' : 'light';
-            
+
             html.setAttribute('data-theme', newTheme);
             localStorage.setItem('theme', newTheme);
             updateThemeIcons(newTheme);
